--- a/springcloud-eureka.yml
+++ b/springcloud-eureka.yml
@@ -1,7 +1,7 @@
 spring:
   profiles:
     active:
-      - dev-One
+      - devOne
 ---
 server:
   port: 9001
@@ -18,7 +18,7 @@ eureka:
       defaultZone: http://admin:eureka@Eureka-One:9001/eureka,http://admin:eureka@Eureka-Two:9002/eureka,http://admin:eureka@Eureka-Three:9003/eureka
 
 spring:
-  profiles: dev-One
+  profiles: devOne
   security:
     user:
       name: admin
@@ -39,7 +39,7 @@ eureka:
       defaultZone: http://admin:eureka@Eureka-One:9001/eureka,http://admin:eureka@Eureka-Two:9002/eureka,http://admin:eureka@Eureka-Three:9003/eureka
 
 spring:
-  profiles: dev-Two
+  profiles: devTwo
   security:
     user:
       name: admin
@@ -60,7 +60,7 @@ eureka:
       defaultZone: http://admin:eureka@Eureka-One:9001/eureka,http://admin:eureka@Eureka-Two:9002/eureka,http://admin:eureka@Eureka-Three:9003/eureka
 
 spring:
-  profiles: dev-Three
+  profiles: devThree
   security:
     user:
       name: admin
